--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^8.0.9",
-    "jest": "^24.8.0"
+    "@testing-library/react": "^8.0.9"
   }
 }
